<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   app:layout_behavior="@string/appbar_scrolling_view_behavior"
   tools:showIn="@layout/activity_login"
   tools:context=".ActivityLogin" tools:layout_editor_absoluteY="56dp" android:background="#FFFFFF"
>

   <ImageView
	  android:id="@+id/conner_image"
	  android:layout_width="226dp"
	  android:layout_height="193.5dp"
	  android:scaleType="fitXY"
	  app:srcCompat="@drawable/ic_path_3"
	  android:contentDescription="@string/conner_image" tools:ignore="VectorDrawableCompat"
	  app:layout_editor_absoluteX="-13dp" app:layout_constraintStart_toStartOf="parent"
	  app:layout_constraintTop_toTopOf="parent"
   />

   <ImageView
	  android:layout_width="66dp"
	  android:layout_height="66dp"
	  android:layout_gravity="center_vertical"
	  app:srcCompat="@drawable/ic_combined_shape"
	  android:id="@+id/imageView2"
	  android:contentDescription="@string/logo"
	  tools:ignore="VectorDrawableCompat"

	  app:layout_editor_absoluteY="100dp"
	  app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
	  app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="100dp"
	  app:layout_constraintTop_toTopOf="parent"/>
   <TextView
	  android:gravity="center_horizontal"
	  android:text="@string/craigslist"
	  android:layout_width="141dp"
	  android:layout_height="40dp" android:id="@+id/companyName"
	  android:textSize="30sp" android:textColor="#4980F9"
	  app:layout_constraintStart_toEndOf="@+id/conner_image" app:layout_constraintHorizontal_bias="0.5"
	  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
	  android:layout_marginTop="181dp" app:layout_constraintTop_toTopOf="parent"/>
   <EditText android:id="@+id/inputUsername"
			 android:paddingLeft="15dp"
			 android:layout_marginRight="14dp"
			 android:background="@drawable/ic_input_box"

			 android:gravity="center_vertical"
			 android:layout_width="0dp" android:layout_height="49dp"
			 android:hint="@string/input_user_hint"
			 android:inputType="text"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="15dp"
			 android:layout_marginStart="15dp" android:layout_marginEnd="15dp" android:autofillHints=""
			 android:layout_marginTop="70dp" app:layout_constraintTop_toBottomOf="@+id/companyName"/>
   <EditText android:layout_width="0dp" android:layout_height="49dp"
			 android:paddingLeft="15dp"
			 android:gravity="center_vertical"
			 app:layout_constraintStart_toStartOf="parent"
			 android:inputType="textPassword"
			 android:background="@drawable/ic_input_box"
			 android:hint="@string/password"
			 android:layout_marginLeft="15dp" android:layout_marginStart="15dp"
			 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="14dp"
			 android:layout_marginRight="15dp" android:layout_marginTop="20dp"
			 android:id="@+id/inputPassword" android:autofillHints=""
			 app:layout_constraintTop_toBottomOf="@+id/inputUsername"/>
   <Button
	  android:text="@string/login"
	  android:layout_width="0dp"
	  android:layout_height="40dp" android:id="@+id/buttonLogin"
	  app:layout_constraintStart_toStartOf="parent"
	  android:layout_marginLeft="15dp" android:layout_marginStart="15dp" app:layout_constraintEnd_toEndOf="parent"
	  android:layout_marginEnd="15dp" android:layout_marginRight="15dp" android:layout_marginTop="20dp"
	  android:textColor="#FFFFFF" android:background="#4980F9"
	  app:layout_constraintTop_toBottomOf="@+id/inputPassword"/>
   <Button
	  android:id="@+id/btn_forget_pass"
	  android:text="@string/forget_password"
	  android:textAllCaps="@android:bool/config_perDisplayFocusEnabled"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:textSize="16dp" android:textColor="#4980F9"
	  android:layout_marginEnd="19dp"
	  app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="19dp"
	  android:layout_marginTop="490dp" app:layout_constraintTop_toTopOf="parent" android:background="#FFFFFF"
	  style="@style/Widget.AppCompat.Button.Borderless"/>
   <Button
	  android:id="@+id/btn_need_account"
	  android:text="@string/need_an_account_click_here"
	  android:textAllCaps="@android:bool/config_perDisplayFocusEnabled"
	  android:gravity="center"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
	  android:background="#FFFFFF"
	  app:layout_constraintEnd_toEndOf="parent" android:textSize="16dp" android:textColor="#4980F9"
	  android:lineSpacingExtra="0.59sp"
	  style="@style/Widget.AppCompat.Button.Borderless"
	  app:layout_constraintBottom_toTopOf="@+id/prolicy" app:layout_constraintTop_toBottomOf="@+id/btn_forget_pass"/>
   <TextView
	  android:text="FAQ - Privacy Policy"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content" android:id="@+id/prolicy"
	  app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
	  app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>