<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
   android:paddingRight="15dp"
   tools:context=".ActivityRegistration" android:id="@+id/registrationAcitivity">
   <androidx.constraintlayout.widget.ConstraintLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  app:layout_behavior="@string/appbar_scrolling_view_behavior"
	  tools:showIn="@layout/activity_login"
	  tools:context=".ActivityLogin" tools:layout_editor_absoluteY="56dp" android:background="#FFFFFF"
   >

	  <ImageView
		 android:id="@+id/conner_image"
		 android:layout_width="226dp"
		 android:layout_height="193.5dp"
		 android:scaleType="fitXY"
		 app:srcCompat="@drawable/ic_path_3"
		 android:contentDescription="@string/conner_image" tools:ignore="VectorDrawableCompat"
		 app:layout_editor_absoluteX="-13dp" app:layout_constraintStart_toStartOf="parent"
		 app:layout_constraintTop_toTopOf="parent"
	  />

	  <ImageView
		 android:layout_width="66dp"
		 android:layout_height="66dp"
		 android:layout_gravity="center_vertical"
		 app:srcCompat="@drawable/ic_combined_shape"
		 android:id="@+id/imageView2"
		 android:contentDescription="@string/logo"
		 tools:ignore="VectorDrawableCompat"

		 app:layout_editor_absoluteY="100dp"
		 app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
		 app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="100dp"
		 app:layout_constraintTop_toTopOf="parent"/>
	  <TextView
		 android:gravity="center_horizontal"
		 android:text="@string/craigslist"
		 android:layout_width="141dp"
		 android:layout_height="40dp" android:id="@+id/companyName"
		 android:textSize="30sp" android:textColor="#4980F9"
		 app:layout_constraintStart_toEndOf="@+id/conner_image" app:layout_constraintHorizontal_bias="0.5"
		 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
		 android:layout_marginTop="181dp" app:layout_constraintTop_toTopOf="parent"/>
   </androidx.constraintlayout.widget.ConstraintLayout>
   <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
			 android:layout_marginLeft="15dp" android:text="Registration" android:textSize="30dp"
			 android:textColor="#000000"
   />
   <EditText android:id="@+id/RegisUser"
			 android:layout_width="match_parent" android:layout_height="wrap_content"
			 android:hint="Username" android:layout_marginLeft="15dp"/>
   <EditText android:id="@+id/RegisPass"
			 android:layout_width="match_parent" android:layout_height="wrap_content"
			 android:layout_marginLeft="15dp" android:hint="Password"
			 android:inputType="textPassword"/>
   <EditText android:id="@+id/RepeatPass"
			 android:layout_width="match_parent" android:layout_height="wrap_content"
			 android:layout_marginLeft="15dp" android:hint="Repeat Password"
			 android:inputType="textPassword"/>
   <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
	  <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
			  android:layout_marginLeft="15dp"
			  android:id="@+id/btn_confirm"
			  android:text="Registration"/>
	  <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
			  android:id="@+id/btn_cancel"
			  android:text="Cancel"
			  android:layout_alignParentRight="true"/>
   </RelativeLayout>

</LinearLayout>